--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -1,6 +1,9 @@
 <header class="p-3 w-full fixed top-0 z-50 bg-linear-to-r from-primary to-black">
   <div class="flex align-middle items-center px-10 mx-auto gap-6">
-    <a class="flex items-center gap-3 max-h-16 text-white border-r-2 border-r-white pr-6">
+    <a
+      routerLink="/"
+      class="flex items-center gap-3 max-h-16 text-white border-r-2 border-r-white pr-6"
+    >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
@@ -18,16 +21,22 @@
     </a>
 
     <nav class="flex gap-3 my-2 uppercase text-lg text-white">
-      <a>Matches</a>
-      <a>Listes</a>
-      <a>Messages</a>
+      @if(accountService.currentUser()){
+      <a routerLink="/members" routerLinkActive="text-accent">Matches</a>
+      <a routerLink="/lists" routerLinkActive="text-accent">Lists</a>
+      <a routerLink="/messages" routerLinkActive="text-accent">Messages</a>
+      }
     </nav>
     <div class="flex align-middle ml-auto gap-3">
       @if(accountService.currentUser(); as user){
-      <div class="dropdown  dropdown-end">
-        <div tabindex="0" role="button" class="flex items-center text-xl text-white gap-3 cursor-pointer">
-          <img src="/user.png" alt="user avatar" class="w-8 h-8 rounded-full">
-          <span>{{user.displayName}}</span>
+      <div class="dropdown dropdown-end">
+        <div
+          tabindex="0"
+          role="button"
+          class="flex items-center text-xl text-white gap-3 cursor-pointer"
+        >
+          <img src="/user.png" alt="user avatar" class="w-8 h-8 rounded-full" />
+          <span>{{ user.displayName }}</span>
         </div>
         <ul
           tabindex="-1"
